spec/support/edi_files/valid/997/9.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *130202*1000*U*00401*000003337*1*P*>…GS*FA*ANCO*ANDPRE*20130202*1000*1403*X*004010…ST*997*0001…AK1*PC*3378…AK9*A*4*4*4…SE*4*0001…GE*1*1403…IEA*1*000003337…