spec/support/edi_files/invalid/5.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *121220*1000*U*00401*000003211*1*P*>…GS*FA*ANCO*ANDPRE*20121220*1000*1358*X*004010…ST*997*0001…AK1*PC*3296…AK9*A*4*4*4…SE*4*0001…GE*1*1358…IEA*1*000003211…ISA*00*          *00*          *ZZ*ANCO          *ZZ*ANDPRE         *121220*1000*U*00401*000003212*1*P*>…GS*FA*ANCO*ANDPRE*20121220*1000*1359*X*004010…ST*997*0001…AK1*PO*3297…AK9*A*11*11*11…SE*4*0001…GE*1*1359…IEA*1*000003212…